# SmartFin

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.coingecko  ERDiagram.markdown  LastDiagramDB.pgerd  SmartFin.drawio  app.db  database.sql  docker-compose.coingecko.yml  docker-compose.yml  main_db_script.sql  pyproject.toml  requirements.txt
SmartFin/app/account/: mutations.py  permissions.py  schema.py  serializers.py  urls.py  views.py
SmartFin/config/: settings.py  shcema.py  urls.py
apps/account/: models.py  schema.py  selectors.py  services.py  types.py
apps/analytics/: models.py  schema.py  selectors.py  services.py  types.py
apps/assets/: apps.py  models.py
apps/core/: models.py
apps/integrations/: models.py
apps/llm/: models.py
apps/maketdata/: apps.py
apps/market/: models.py
apps/marketdata/: __init__.py  api.py  apps.py  architecture.txt  data.txt  marketdata.drawio  models.py  prompts.txt  schema.py  to-do-list.txt
apps/portfolio/: models.py  schema.py  selectors.py  services.py  types.py
backend/: .env.example  celerybeat-schedule-shm  entrypoint.sh
backend/api/: models.py  serializers.py  signals.py  tasks.py  urls.py  vector_service.py  views.py
backend/config/: celery.py  celery_beat_schedule.py  settings.py  shcema.py  urls.py
common/: __init__.py
config/: settings.py  settings_marketdata_tests.py  urls.py
database_backend/: Dockerfile  docker-compose.yml  requirements.txt
graphql/: context.py  dataloaders.py  directives.py  scalars.py  schema.py
graphql_collector/: directives.py  scalars.py
(+379 files in other folders)
