[project]
name = "smartfin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "graphql-core>=3.2,<4",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.12",
    "pytest>=9.0.1",
    "redis>=7.0.1",
    "respx>=0.22.0",
    "strawberry-graphql>=0.284.1",
    "strawberry-graphql-django>=0.67.0",
]
