[project]
name = "smartfin"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]==5.5.3",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "django==5.2.6",
    "django-celery-beat==2.8.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "pillow==11.3.0",
    "psycopg2==2.9.10",
    "strawberry-graphql==0.284.0",
    "strawberry-graphql-django==0.67.2",
]
